WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135681
for-in is failing fast/dom/dataset-xhtml.xhtml and dataset.html tests
https://bugs.webkit.org/show_bug.cgi?id=135681
Summary
for-in is failing fast/dom/dataset-xhtml.xhtml and dataset.html tests
Mark Lam
Reported
2014-08-06 17:53:15 PDT
See
http://build.webkit.org/results/Apple%20Mavericks%20Debug%20WK2%20(Tests)/r172181%20(6099)/results.html
. Will temporarily add failed tests to TestExpectations. Please revert when fixed.
Attachments
Patch
(2.74 KB, patch)
2014-08-07 09:41 PDT
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2014-08-06 18:01:09 PDT
Test failures added to TestExpectations in
r172198
: <
http://trac.webkit.org/r172198
>. Please revert when this bug has been fixed.
Mark Hahnenberg
Comment 2
2014-08-07 09:41:15 PDT
Created
attachment 236192
[details]
Patch
WebKit Commit Bot
Comment 3
2014-08-07 10:30:10 PDT
Comment on
attachment 236192
[details]
Patch Clearing flags on attachment: 236192 Committed
r172216
: <
http://trac.webkit.org/changeset/172216
>
WebKit Commit Bot
Comment 4
2014-08-07 10:30:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug